--- a/alphaUkeBox/www/index.html
+++ b/alphaUkeBox/www/index.html
@@ -23,9 +23,10 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
+    <script src="js/constants.js"></script>
   </head>
 
-  <body ng-app="starter">
-    <ion-nav-view></ion-nav-view>
+  <body ng-app="starter" ng-controller="AppCtrl">
+    <ui-view></ui-view>
   </body>
 </html>
